# text2sql_eval

./: ba_llm_visualisierung_sentences.csv  ba_llm_visualisierung_tokens.csv  ba_llm_visualisierung_words.csv  benchmark_qwen.jsonl  complexity_map.py  df.ipynb  embeddings.ipynb  eval.ipynb  gpu.py  gpu_metrics_log.csv  judge.ipynb  judge.py  main.py  pyproject.toml  test.csv  test.ipynb  text2sql_eval.ipynb
benchmark_logs/: deepseek-r1-14b_20250716-154120.jsonl  gemma3-12b_20250716-165749.jsonl  gpt-4.1-mini_20250716-182957.jsonl  gpt-4.1-nano_20250716-165128.jsonl  gpt-4.1-nano_20250716-173648.jsonl  gpt-4.1_20250716-175823.jsonl  llama3.1-4b_20250718-223000.jsonl  llama3.1-4b_20250718-224432.jsonl  llama3.1-sql-4b_20250718-222528.jsonl  llama3.2_20250718-225737.jsonl  llama3.2_20250718-230255.jsonl  o3-mini_20250716-174053.jsonl  o3_20250716-180115.jsonl  o4-mini_20250716-191044.jsonl  o4-mini_20250726-212205.jsonl  phi4-before-system-prompt.jsonl  phi4-latest_20250716-204502.jsonl  qwen2.5-14b_20250716-200130.jsonl  qwen2.5-14b_20250726-183825.jsonl  qwen2.5-coder-14b_20250716-162700.jsonl  qwen2.5-coder-14b_20250726-201840.jsonl  qwen2.5-latest_20250716-192939.jsonl  qwen2.5-latest_20250726-173546.jsonl  qwen2.5-latest_20250726-174141.jsonl  qwen2.5-latest_20250726-174219.jsonl  qwen2.5-latest_20250726-180514.jsonl  qwen2.5-latest_20250726-181558.jsonl  qwen3-14b_20250716-171949.jsonl  qwen3-14b_20250716-171949_think.jsonl  qwen3-14b_20250716-230841.jsonl  qwen3-30b-a3b_20250717-125739.jsonl  qwen3-30b-a3b_20250717-125739_nothink.jsonl  (+5 more)
better_benchmarks/: o3.jsonl  (+22 more)
(+28 files in other folders)
