[project]
name = "ba-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "azure-identity>=1.23.1",
    "datasets>=2.14.4",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "fsspec>=2025.7.0",
    "graphviz>=0.21",
    "huggingface-hub>=0.33.4",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "nvidia-ml-py3>=7.352.0",
    "ollama>=0.5.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sqlglot>=27.0.0",
    "sqlparse>=0.5.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
